--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,23 +1,7 @@
 {{ partial "head.html" . }}
-<!--
-<?php
-$servername = "g02076_membros";
-$username = "g02076_membros";
-$password = "hackerschool";
 
-
-echo "test"
-// Create connection
-$conn = new mysqli($servername, $username, $password);
-
-// Check connection
-if ($conn->connect_error) {
-die("Connection failed: " . $conn->connect_error);
-}
-echo "Connected successfully";
-?>
--->
 {{ "<!-- navigation -->" | safeHTML }}
+
 <header class="shadow-bottom sticky-top bg-gray">
     <div class="container">
         {{ partial "navigation.html" . }}
@@ -30,9 +14,41 @@ echo "Connected successfully";
 
 <link rel="stylesheet" href="{{ "css/matrixstyles.css" | relURL }}">
 
-<div id="overlay">
+<div id="overlay"></div>
+
+<div class="content">
     <p id="type-js"></p> 
+    <div id="hidden-content"> 
+        <img id="logo" style="width: 5em !important" src="/HS_NOVO.svg">
+    </div>
 </div>
+
+<noscript>
+    <div class="content">
+        <div id="hidden-content" style="display: flex"> 
+            <img id="logo" style="width: 5em !important" src="/HS_NOVO.svg">
+        </div>
+    </div>
+</noscript>
+
+
+<section id="home-content" style="padding-bottom: 48px;" class="single sec-membros fader-alternate">
+    <!--   <h1 class="responsiveHeaderText" style="color:white; text-align: center;height: 200px;background-color: var(--primary-color);vertical-align: middle;text-align: center;vertical-align: middle;line-height: 200px;">Sobre nós</h1> 
+-->  
+    <div class="container pt-4 aboutUsContainer">
+        <!-- <div style="color: white;" class="p-5 bg-gray"> -->
+
+        <div class="dynamicThingy">
+            <h4>A HackerSchool</h4>
+            <p style="color: white;">
+                Desde 2012, a HackerSchool foca-se na criação de projetos nas mais diversas áreas da tecnologia, incentivando os seus membros a aprender e a colocar em prática o seu conhecimento em situações reais.</p>
+            <p style="color: white;">
+                Acreditamos num ambiente multidisciplinar e acessível para qualquer aluno, com ou sem bases, acompanhando o seu processo de aprendizagem, seguindo o ideal learn by doing e partilhando conhecimentos através de Workshops e dos nossos projetos já desenvolvidos ou em desenvolvimento.                     </p>
+        </div>
+
+
+    </div>
+</section>
 
 <canvas id="matrixCanvas"></canvas>
 <script src="{{ "js/scripttext.js" | relURL }}"></script>
@@ -52,4 +68,4 @@ echo "Connected successfully";
 </section> -->
 {{ "<!-- /contactos -->" | safeHTML }}
 
-<!-- {{ partial "footer.html" . }} -->
+{{ partial "footer.html" . }}
