--- a/static/css/matrixstyles.css
+++ b/static/css/matrixstyles.css
@@ -5,12 +5,82 @@ body {
 #type-js {  
     color: white;
     font-size: 18px;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: monospace;
     text-align:center;
     
     z-index: 3;
     position: relative;
     line-height: normal;
     /* top: 150px; */
+    /* transition: all 2s; */
 }
+
+#hidden-content {
+    display: none;
+    align-items: center;
+    text-align:center;
+    color: white; 
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+/* Terminal green text */
+.terminal-green {
+    color: #00ff00;
+}
+
+/* Fade-out and fade-in animation */
+.fade-out {
+    animation: fadeOut 1s forwards;
+}
+
+.fade-in {
+    animation: fadeIn 1s forwards;
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+/* .line-1{ */
+/*     position: relative; */
+/*     top: 50%;   */
+/*     width: 24em; */
+/*     margin: 0 auto; */
+/*     border-right: 2px solid rgba(255,255,255,.75); */
+/*     font-size: 180%; */
+/*     text-align: center; */
+/*     white-space: nowrap; */
+/*     overflow: wrap; */
+/*     transform: translateY(-50%);     */
+/* } */
+/**/
+/**/
+/* /* Animation */ */
+/* .anim-typewriter{ */
+/*   animation: typewriter 4s steps(44) 1s 1 normal both, */
+/*              blinkTextCursor 500ms steps(44) infinite normal; */
+/* } */
+/* @keyframes typewriter{ */
+/*   from{width: 0;} */
+/*   to{width: 24em;} */
+/* } */
+/* @keyframes blinkTextCursor{ */
+/*   from{border-right-color: rgba(255,255,255,.75);} */
+/*   to{border-right-color: transparent;} */
+/* } */
 
