--- a/themes/dot/assets/css/style.css
+++ b/themes/dot/assets/css/style.css
@@ -7,12 +7,20 @@ body {
   font-size: 18px;
   color: var(--text-color);
   background-color: black;   
-  height: 100%;
+  height: min(100vh);
   display: flex;
   flex-direction: column;
 }
 
-p,
+.content {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    flex-grow: 1;
+    min-height: 20vh;
+    transition: min-height 2s ease; /* Transition for min-height */
+}
+
 .paragraph {
   color: var(--text-color);
   font-size: 16px;
@@ -1105,7 +1113,7 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* z-index: -1; */
+  z-index: -1;
 
 }
 
@@ -1114,4 +1122,8 @@ header {
   top: 0;
   left: 0;
   z-index: -2;
+}
+
+#hidden-content {
+    display: none;
 }
