--- a/layouts/page/membros.html
+++ b/layouts/page/membros.html
@@ -20,11 +20,11 @@
   <section class="section sec-membros">
     <div class="container">
       <div class="col-12 text-center">
-        <h2 class="section-title">Presidência</h2>
+        <h2 class="section-title">Direção</h2>
       </div>
       <div class="row justify-content-center">
           {{ "<!-- membro -->" | safeHTML }}
-          {{ range .Site.Data.membros.presidencia }}
+          {{ range .Site.Data.membros.direcao }}
           <div class="fader member-card col-xl-3 col-lg-4 col-sm-6 col-6 dynamicThingy text-center fader-fadeInUp" style="background-color: var(--secondary-color);">
               <h3 style="padding-top: 15px;">{{ .nome }}
                 <p class="mb-0">{{ .cargo }}</p>
