fix: no-script home page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,7 +16,7 @@
 
 <div id="overlay"></div>
 
-<div class="content">
+<div class="content" style="min-height: 100vh">
     <p id="type-js"></p> 
     <div id="hidden-content"> 
         <img id="logo" style="width: 5em !important" src="/HS_NOVO.svg">
@@ -24,7 +24,7 @@
 </div>
 
 <noscript>
-    <div class="content">
+    <div class="content" style="min-height: 20vh">
         <div id="hidden-content" style="display: flex"> 
             <img id="logo" style="width: 5em !important" src="/HS_NOVO.svg">
         </div>
