--- a/themes/dot/assets/css/style.css
+++ b/themes/dot/assets/css/style.css
@@ -289,6 +289,9 @@ pre {
   color: var(--white-color) !important;
 }
 
+.mb-0{
+    color: var(--secondary);
+}
 .mb-10 {
   margin-bottom: 10px !important;
 }
