--- a/layouts/page/recrutamento.html
+++ b/layouts/page/recrutamento.html
@@ -42,7 +42,7 @@
 		
 		<section class="section shadow fader">
 		<!-- fix url -->
-		<a href=" https://forms.gle/BFTtmE27VMwKhj2A6" class="btn btn-primary {{ if .Site.Params.recruitmentTime }} {{ else }} disabled {{ end }}" 
+		<a href="https://forms.gle/ZHPToWjq5mDMpXqS6" class="btn btn-primary {{ if .Site.Params.recruitmentTime }} {{ else }} disabled {{ end }}" 
 			style="text-align: center;vertical-align: middle;line-height: 40px;
 				width: 100%;font-size: 30;"> 
 				
