gralhas, adição de fotos, síntese de parágrafos, alteração recrutamento

--- a/layouts/page/recrutamento.html
+++ b/layouts/page/recrutamento.html
@@ -29,24 +29,20 @@
 		<div class="row justify-content-center">
 			<div class="col-12 text-center">
 				<p style="color:white; margin-bottom: 40px; font-size:20px">
-					O nosso processo de recrutamento consiste numa série de tarefas que 
-					terás de completar ao longo de um mês, algumas mais simples como resolver
-					puzzles, outras mais complicadas como programar e mexer em eletrónica. 
-					Durante este período, poderás participar em workshops para te ajudar, 
-					ou falar com outros recrutas e membros do núcleo. Para além disso, teremos 
-					eventos para promover team building, e algumas outras surpresas. 
-					Se estás interessado, tenta o desafio!
-				</p>
+					O nosso recrutamento dura cerca de 2 semanas, e vamos pôr à prova a tua perseverança, criatividade 
+					e trabalho em equipa. <br> Se estás com interesse no nosso núcleo, tenta o desafio!
+					Terás vários puzzles e enigmas
+					para resolver - mas cuidado! Não te deixes apanhar pelos...  <span style="font-family: 'Courier New', monospace;">xad0w.b1ts</span>.
 			</div>
 		</div>
 		
 		<section class="section shadow fader">
 		<!-- fix url -->
-		<a href="https://forms.gle/ZHPToWjq5mDMpXqS6" class="btn btn-primary {{ if .Site.Params.recruitmentTime }} {{ else }} disabled {{ end }}" 
+		<a href=" https://forms.gle/ZHPToWjq5mDMpXqS6" class="btn btn-primary {{ if .Site.Params.recruitmentTime }} {{ else }} disabled {{ end }}" 
 			style="text-align: center;vertical-align: middle;line-height: 40px;
 				width: 100%;font-size: 30;"> 
 				
-			{{ if .Site.Params.recruitmentTime }} Inscreve-te Agora! {{ else }} Inscreve-te no proximo semestre! {{ end }}
+			{{ if .Site.Params.recruitmentTime }} Inscreve-te Agora! {{ else }} Inscreve-te no próximo semestre! {{ end }}
 		</a>	
 		</section>
 		
@@ -57,26 +53,26 @@
 	<div style="color:white; display: flex; 
 	flex-wrap: wrap; flex-direction: row; justify-content: center; margin:auto;">
 		<div style="background-color: var(--secondary-color); width: 250px; " class="dynamicThingy text-left helperCard">
-			Terás uma reunião inicial que serve para debater ideias e para formar grupos,
+			Vais estagiar num projeto da HackerSchool, ao mesmo tempo em que participas 
+			em workshops para desenvolver a tua cultura hacker.			
+
+			<br>
+			<div class="d-flex align-items-center justify-content-center">
+				<i class="fas fa-cogs fa-3x pt-2"></i>
+			</div>
+		</div >
+		<div style="background-color: var(--secondary-color); width: 250px" class="dynamicThingy text-left helperCard">
+			Terás uma reunião inicial para debater ideias e para formar grupos,
 			desenvolvendo a tua parte social e trabalho em equipa.
 
 			<br>
 			<div class="d-flex align-items-center justify-content-center">
 				<i class="fas fa-users fa-3x pt-2"></i>
 			</div>
-		</div >
-		<div style="background-color: var(--secondary-color); width: 250px" class="dynamicThingy text-left helperCard">
-			Para além disso, todos os semestres são planeados vários workshops em
-			várias áreas que consideramos importantes para desenvolver a tua cultura hacker.
-
-			<br>
-			<div class="d-flex align-items-center justify-content-center">
-				<i class="fas fa-cogs fa-3x pt-2"></i>
-			</div>
 		</div>
 		<div style="background-color: var(--secondary-color); width: 250px" class="dynamicThingy text-left helperCard">
-			Para o caso de te sentires sozinho nesta jornada de fazer o teu
-			projeto acontecer, não te preocupes! Temos uma equipa de HackExperts e uma inteira comunidade sempre disposta a ajudar!
+			E se precisares de ajuda nesta jornada de fazer o teu
+			projeto acontecer, terás uma comunidade inteira sempre disposta para te apoiar!
 
 			<br>
 			<div class="d-flex align-items-center justify-content-center">
