--- a/layouts/page/sobre.html
+++ b/layouts/page/sobre.html
@@ -19,12 +19,12 @@
     <div class="container pt-4 aboutUsContainer">
         <!-- <div style="color: white;" class="p-5 bg-gray"> -->
 
-        <div class="dynamicThingy fader">
+        <!-- <div class="dynamicThingy fader">
             <h4>Quem somos?</h4>
             <p style="color: white;">
                 Somos um núcleo de alunos do Instituto Superior Técnico com uma enorme vontade de aprender em equipa e conceber ideias novas das mais variadas áreas onde a tecnologia se insere.
             </p>
-        </div>
+        </div> -->
 
         <div class="dynamicThingy fader">
             <h4>O que é a HackerSchool?</h4>
@@ -37,29 +37,7 @@
             </p>
         </div>
 
-        <div class="dynamicThingy fader">
-            <h4>Eventos</h4>
-
-
-
-
-            <p style="color: white;">
-
-                A HackerSchool funciona em ciclos semestrais com Workshops, HackNights e sessões de TeamBuilding. Ao longo do ano podem juntar-se à programação Hackathons, Palestras, Feiras, entre outros eventos. Os membros da HackerSchool têm sempre entrada garantida e gratuita em qualquer evento realizado pelo núcleo!
-            </p>
-            <br>
-            <ul>
-                <li style="color: white;">
-                    <strong>HackNight</strong>: Uma noite de convívio e jantar entre os membros da HackerSchool, aberta ao público, onde se discutem atividades e projetos que têm sido desenvolvidos, bem como planos futuros. Depois do jantar costuma haver espaço para conceção de projetos temáticos de curta duração.
-                </li>
-                <br>
-                <li style="color: white;">
-                    <strong>Workshop</strong>: Um evento em que é dada formação base acerca de um determinado tema, sendo dado acesso aos participantes ferramentas que podem utilizar para aplicarem os conhecimentos adquiridos na concretização das suas ideias. Este evento resulta sempre num protótipo final onde se aplicam os conhecimentos expostos.           <br> <strong class="sub"> WorkShops Internos </strong> - dados da comunidade do núcleo para o núcleo.
-                    <br> <strong class="sub"> WorkShops Externos </strong> - dados para a toda a comunidade externa. 
-                </li>
-            </ul>
-        </div>
-
+       
         <div class="dynamicThingy fader">
             <h4>Objectivos</h4>
             <p style="color: white;">
@@ -73,6 +51,19 @@
             <p style="color: white;">
                 A HackerSchool também se pretende afirmar como um centro de convergência multidisciplinar onde alunos e professores de cursos diferentes se unem para experimentar e partilhar ideias inovadoras. 
             </p>
+        </div>
+        
+        <div class="dynamicThingy fader">
+            <h4>Eventos</h4>
+
+
+
+
+            <p style="color: white;">
+
+                A HackerSchool funciona em ciclos semestrais com Workshops, HackNights e sessões de TeamBuilding. Ao longo do ano podem juntar-se à programação Hackathons, Palestras, Feiras, entre outros eventos. Os membros da HackerSchool têm sempre entrada garantida e gratuita em qualquer evento realizado pelo núcleo!
+            </p>
+            
         </div>
 
         <!--         <a href="/sobre/textos">
