--- a/layouts/index.html
+++ b/layouts/index.html
@@ -40,8 +40,10 @@
             <h2>A HackerSchool</h2>
             <p style="color: white;">
                 Desde 2012, a HackerSchool foca-se na criação de projetos nas mais diversas áreas da tecnologia, incentivando os seus membros a aprender e a colocar em prática o seu conhecimento em situações reais.</p>
-            <p style="color: white;">
-                Acreditamos num ambiente multidisciplinar e acessível para qualquer aluno, com ou sem bases, acompanhando o seu processo de aprendizagem, seguindo o ideal learn by doing e partilhando conhecimentos através de Workshops e dos nossos projetos já desenvolvidos ou em desenvolvimento.                     </p>
+            <!-- Is this really relevant in the first page? <p style="color: white;">
+                Acreditamos num ambiente multidisciplinar e acessível para qualquer aluno, com ou sem bases, 
+                acompanhando o seu processo de aprendizagem, seguindo o ideal learn by doing e partilhando conhecimentos
+                 através de Workshops e dos nossos projetos já desenvolvidos ou em desenvolvimento.     </p> -->
         </div>
     </div>
 
@@ -75,20 +77,22 @@
                         Junta-te a nós na próxima HackNight, sempre na terceira quinta-feira de todos os meses!</p>
 
                     <p style="color: white">
-                        Uma noite de convívio e jantar entre os membros da HackerSchool, aberta ao público, onde se discutem atividades e projetos que têm sido desenvolvidos, bem como planos futuros. Depois do jantar costuma haver espaço para conceção de projetos temáticos de curta duração.
+                        Uma noite de convívio e jantar entre os membros da HackerSchool, aberta ao público, 
+                        onde se discutem atividades e projetos que têm sido desenvolvidos, bem como planos futuros. 
+                        Depois do jantar costuma haver espaço para a conceção de projetos temáticos de curta duração.
                     </p>
                 </div>
                 <img src="/images/home/pizza_tecnico.jpg" alt="Hackers com pizzas junto ao logo do Técnico, na Alameda.">
             </div>
-            <h3>- WorkShops</h3>
+            <h3>- Workshops</h3>
             <div class="home-content-tab">
                 <div class="home-content-tab-text">
 
                     <p style="color: white">
-                        Mais informações brevemente.
+                        [Mais informações brevemente.]
 
                     <p style="color: white">
-                        Um evento em que é dada formação base acerca de um determinado tema, sendo dado acesso aos participantes ferramentas que podem utilizar para aplicarem os conhecimentos adquiridos na concretização das suas ideias. Este evento resulta sempre num protótipo final onde se aplicam os conhecimentos expostos.                 
+                        Um evento em que é dada formação base acerca de um determinado tema e onde são disponibilizadas ferramentas que os participantes podem utilizar para aplicarem os conhecimentos adquiridos na concretização das suas ideias. Este evento resulta sempre num protótipo final onde se aplicam os conhecimentos expostos.                 
                     </p>
                 </div>
                 <img src="/images/home/workshops.webp" alt="WorkShop HackerSchool">
