--- a/layouts/page/membros.html
+++ b/layouts/page/membros.html
@@ -122,7 +122,7 @@
   <section class="section sec-membros">
     <div class="container">
       <div class="col-12 text-center">
-        <h2 class="section-title">Laboratório</h2>
+        <h2 class="section-title">Gestão Laboratório</h2>
       </div>
       <div class="row justify-content-center">
           {{ "<!-- membro -->" | safeHTML }}
