fix: workshops text

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -92,7 +92,8 @@
                         [Mais informações brevemente.]
 
                     <p style="color: white">
-                        Um evento em que é dada formação base acerca de um determinado tema e onde são disponibilizadas ferramentas que os participantes podem utilizar para aplicarem os conhecimentos adquiridos na concretização das suas ideias. Este evento resulta sempre num protótipo final onde se aplicam os conhecimentos expostos.                 
+                        Um evento que oferece formação básica sobre um tema específico e disponibiliza ferramentas para que os participantes apliquem os conhecimentos adquiridos na concretização das suas ideias, resultando num protótipo final que reflete o que foi aprendido.
+
                     </p>
                 </div>
                 <img src="/images/home/workshops.webp" alt="WorkShop HackerSchool">
