--- a/layouts/projetos/list.html
+++ b/layouts/projetos/list.html
@@ -35,6 +35,11 @@
             {{ range .Params.teamPhotos }}
                 <img class="projectMembersPhoto" src="/images/membros/{{.}}">
             {{ end }}
+            <a href="{{ .RelPermalink }}" class="btn btn-primary"  
+                            style="text-align: center; vertical-align: middle; line-height: 40px;  
+                            width: 80%; font-size: 20px; margin: 30px; display: inline-block;">
+                            Saber mais
+                        </a>
           </div>
         </div>
       </div>
