--- a/layouts/projetos/list.html
+++ b/layouts/projetos/list.html
@@ -21,7 +21,7 @@
       <h2 class="section-title"> Projetos Atuais </h2>
     </div>
     <div class="row justify-content-center pbottom-20 projectsWrapper">
-      {{ range where .Pages  "Type" "currentProject" }}
+      {{ range where .Pages  "Params.status" "current" }}
       {{ "<!-- projeto -->" | safeHTML }}
       <div class="col-lg-6 col-sm-12 col-xs-12 mb-4 fader fader-fadeInUp projectWrapper">
         <div class="px-4 py-2 bg-gray dynamicThingy text-center d-block">
@@ -53,7 +53,7 @@
       <h2 class="section-title"> Projetos Antigos </h2>
       
       <div class="row justify-content-center pbottom-20 projectsWrapper">
-        {{ range where .Pages  "Type" "projeto" }}
+        {{ range where .Pages  "Params.status" "old" }}
         {{ "<!-- projeto -->" | safeHTML }}
         <div class="col-lg-6 col-sm-12 col-xs-12 mb-4 fader fader-fadeInUp projectWrapper">
           <div class="px-4 py-2 bg-gray dynamicThingy text-center d-block">
