--- a/themes/dot/assets/css/style.css
+++ b/themes/dot/assets/css/style.css
@@ -1131,3 +1131,9 @@ header {
 #hidden-content {
     display: none;
 }
+
+
+/* Hover effect for social icons */
+.social-icons a:hover {
+    color: #6dba83;
+}
