--- a/layouts/shortcodes/socials.html
+++ b/layouts/shortcodes/socials.html
@@ -1,7 +1,9 @@
 <div style="margin-left: auto; align-items: center;">
-    <ul class="list-inline mb-0">
+    <ul class="list-inline mb-0 social-icons">
         {{ range .Site.Params.socialIcon }}
         <li class="list-inline-item mb-0"><a class="text-color d-inline-block p-2" href="{{ .URL | absURL}}"><i style="font-size: 1.5em;" class="{{ .icon }}"></i></a></li>
         {{ end }}
     </ul>
 </div>
+
+
