Feeds de RSS das Hacknights e Workshops
Descobri hoje que dava para fazer isto e decidi implementar, se acharem based digam no discord.

--- a/layouts/hacknights/list.html
+++ b/layouts/hacknights/list.html
@@ -15,7 +15,10 @@
 <section id="home-content" style="padding-bottom: 48px;" class="single fader-alternate">
     <div class="container pt-4 aboutUsContainer">
         <div class="dynamicThingy" style="color: white">
-
+            <p><a href="{{ .RelPermalink }}feed.xml">
+                <img src="/rss.svg" alt="Feed RSS" style="width: 2em !important">
+                </a></p>
+            
             {{ .Content}}
         </div>
     </div>
