--- a/layouts/workshops/list.html
+++ b/layouts/workshops/list.html
@@ -16,7 +16,7 @@
     <div class="container pt-4 aboutUsContainer">
         <div class="dynamicThingy" style="color: white">
             <p><a href="{{ .RelPermalink }}feed.xml">
-                <img src="/rss.svg" alt="Feed RSS" style="width: 2em !important">
+                <img src="/images/rss.svg" alt="Feed RSS" style="width: 2em !important">
                 </a></p>
                 
             {{ .Content}}
