--- a/themes/dot/assets/css/style.css
+++ b/themes/dot/assets/css/style.css
@@ -775,7 +775,8 @@ li.parent a {
 .sec-membros .member-card {
   margin: 0px;
   margin-bottom: 20px;
-  cursor: auto;
+  /* cursor: auto; */
+  cursor: pointer;
   padding: 11px;
   margin-top: 10px;
   height: 303px;
@@ -1107,18 +1108,54 @@ header {
 
 
 #overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  top:50px;
-  width: 100vw;
-  height: 100vh;
-  background: radial-gradient(ellipse, rgba(77, 77, 77, 1) 0%, rgba(27, 27, 27, 0.5) 70%);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  z-index: -1;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -45%); /* Adjust to truly center it */
+  width: 40%;
+  height: 85%;
+  background-color: var(--secondary-color);
+  display: none; /* Hide the overlay by default */
+  justify-content: center; /* Center content horizontally */
+  align-items: center; /* Center content vertically */
+  z-index: 1000;
+  border-radius: 3%;
+  border: solid;
+  border-color: var(--text-color-dark);
+}
 
+#overlay-content {
+  height: 100%;
+  width: 100%;
+}
+
+#overlay-content img {
+  height: 128px;
+  width: 128px;
+  object-fit: cover;
+  border-radius: 50%;
+  border: solid 3px var(--text-color-dark);
+}
+
+#overlay-content h4 {
+  justify-self: left;
+  padding-left: 20px;
+}
+
+#overlay-projects {
+  display: flex;
+  border: solid 2px black;
+  flex-direction: column;
+}
+
+.overlay-project-holder{
+  display: flex;
+  flex-direction: row;
+}
+
+#overlay-socials {
+  display: flex;
+  flex-direction: row;
 }
 
 #matrixCanvas {
